Conclusão de design da home

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,12 @@
     box-sizing: border-box;
     font-family: 'Ubuntu', sans-serif;
 }
+
+@font-face {
+    font-family: "Aristotelica";
+    src: url("./assets/Fonts/AristotelicaSmallCaps-Regular.ttf") format("truetype");
+}
+@font-face {
+    font-family: "Arista";
+    src: url("./assets/Fonts/z-arista.alternate.ttf") format("truetype");
+}
